# 2020GrafTemplate

./: .gitignore  CMakeLists.txt  README.md  Skeleton.cpp
lib/Linux/: libGLEW.so.2.1.0  libglut.so.3.11.0
